# bob-ide

./: .gitignore  AGENT_ECOSYSTEM_CHERRY_PICKS.md  APPLE_PIVOT_PLAN.md  BACKEND_FIRST_ARCHITECTURE.md  BOB_IDE_2.2_TOOLKIT_MAP.md  CONSOLIDATION_SUMMARY.md  CSS_DELIVERY_CHECKLIST.md  DECISION_TREE.md  DEPLOYMENT_READY.md  INDEX.md  LICENSE  LISP_MACHINE_INTEGRATION.md  MASTER_STATUS.md  MCP_INTEGRATION_STRATEGY.md  OMEGA_INTEGRATION.md  README.md  REDUNDANCY_CHECK.md  REFACTOR_PLAN.json  SESSION_COMPLETE.md  SESSION_SUMMARY.md  STYLES_GUIDE.md  USER_GUIDE_GITHUB_PAGES.md  app-release-1.0.html  bob-ide-browser.html  gitserver.py  index.html  manifest.webmanifest  nemotron.py  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  sovereign-swarm.yml
artifacts/: README.md  SOVEREIGN_IDE_FRAMEWORK.ts
artifacts/artifacts-schema/: ARTIFACT_TYPES.ts
artifacts/bridges/: GIT_COMMAND_CENTER.md  SOVEREIGN_XML_COMPILER.md
assets/: index-Bs_KnvZG.css
backend/: agent-pool.ts  executor.ts  lisp-vm.ts  mcp-router.ts  s-autocode-bridge.ts  server.ts  wasm.ts  worm-chain.ts  xml-compiler-bridge.ts
docs/: index.html
docs/assets/: index-CfBMXSM9.js
errant/lean/: DeeCall49_Final.lean
public/: index.html
quantum-piper/: MANIFEST.md  SEO.md  seo-meta.html
quantum-piper/magmad/: Cargo.toml  build.rs
quantum-piper/magmad/proto/: sovereign.proto
quantum-piper/magmad/src/: bob.rs  cli.rs  config.rs  errant_ffi.rs  main.rs  megtron.rs  nats_bus.rs  sovereign_ffi.rs
quantum-piper/magmad/src/grpc/: mod.rs  sovereign_types.rs
quantum-piper/magmad/src/http/: mod.rs
quantum-piper/orchestrator/: civilization_boot.mjs
quantum-piper/qec/: README.md  metadata.json
quantum-piper/reasoning/: BOOK_OF_WISDOM.md  THE_333.ipynb  package.json
quantum-piper/swarm/: QUANTUM_EFFECT.md  agent_parallel_fsm.mjs  bedrock_agent_router.mjs  chain.ts  creative_flux_fsm.mjs  meta_transformer_arch.mjs  qnu_temperature.mjs  sovereign_fsm.mjs  swarm_coordinator.mjs
quantum-piper/tools/: build_quantum.py  nemotron.py
quantum-piper/wasm/: quantum_wasm.js  quantum_wasm_bg.wasm
sov-rust-core/: Cargo.toml
sov-rust-core/src/: lib.rs  pirtm.rs  qec.rs  spectral.rs  zheev.rs
src/: App.tsx  main.tsx
src/pages/: Welcome.tsx
src/stores/: agent.store.ts  editor.store.ts  github.store.ts  model.store.ts  settings.store.ts  terminal.store.ts  workspace.store.ts
src/styles/: animations.css  components.css  global.css  layout.css  reset.css  responsive.css  themes.css  tokens.css  (+1 more)
(+136 files in other folders)
