[package]
name = "sov-rust-core"
version = "0.1.0"
edition = "2021"
description = "Sovereign Rust core — eigensolver, PIRTM, QEC, spectral primitives bridging sov-kernel-monster"

[dependencies]
nalgebra = { version = "0.33", features = ["std"] }
num-complex = "0.4"
ndarray = "0.17"
faer = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
